--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=flying_sheep">flying_sheep</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528527835"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    403 points
+                                    404 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528560555"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    356 points
+                                    360 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.tomshardware.com/news/intel-28-core-cpu-5ghz,37244.html">Intel: We 'Forgot' to Mention 28-Core, 5-GHz CPU Demo Was Overclocked</a>
+                                    <a href="https://www.indiehackers.com/round-table/how-did-you-find-your-earliest-users">How to Find Your Earliest Users</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17263651">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17268363">
                                         
-                                            116 comments
+                                            44 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=buserror">buserror</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528447440"
+                                            href="https://news.ycombinator.com/user?id=ChanningAllen">ChanningAllen</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528482439"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     326 points
                                 </span>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528593005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528593604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
