--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/dailyjs/how-i-automated-my-job-with-node-js-94bf4e423017">How I Automated My Job</a>
+                                    <a href="https://www.wsj.com/articles/facebook-gave-some-companies-access-to-additional-data-about-users-friends-1528490406">Facebook Gave Some Companies Access to Additional Data About Users’ Friends</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17265458">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17269552">
                                         
-                                            68 comments
+                                            70 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=codingcoop">codingcoop</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528466591"
+                                            href="https://news.ycombinator.com/user?id=radicaldreamer">radicaldreamer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528490893"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     190 points
                                 </span>
@@ -317,7 +317,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17269941">
                                         
-                                            67 comments
+                                            68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=aphextron">aphextron</a></strong> &nbsp;•&nbsp;
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=blacksqr">blacksqr</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528460878"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    170 points
+                                    171 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=misnamed">misnamed</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528503075"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    160 points
+                                    161 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528593604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528594204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
