--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/facebook-gave-some-companies-access-to-additional-data-about-users-friends-1528490406">Facebook Gave Some Companies Access to Additional Data About Users’ Friends</a>
+                                    <a href="https://medium.com/dailyjs/how-i-automated-my-job-with-node-js-94bf4e423017">How I Automated My Job</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17269552">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17265458">
                                         
-                                            70 comments
+                                            68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=radicaldreamer">radicaldreamer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528490893"
+                                            href="https://news.ycombinator.com/user?id=codingcoop">codingcoop</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528466591"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    190 points
+                                    191 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528593604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528594204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
