--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://nautil.us/blog/larry-david-and-the-game-theory-of-anonymous-donations">The Game Theory of Anonymous Donations</a>
+                                    <a href="https://www.wsj.com/articles/a-costly-deadly-obsession-with-coal-1528282800">A Costly, Deadly Obsession with Coal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17272365">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17259594">
                                         
-                                            38 comments
+                                            112 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528540424"
+                                            href="https://news.ycombinator.com/user?id=JumpCrisscross">JumpCrisscross</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528401170"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    98 points
+                                    99 points
                                 </span>
                             </td>
                         </tr>
@@ -275,7 +275,7 @@
                                             href="https://news.ycombinator.com/user?id=aberoham">aberoham</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528502798"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    95 points
+                                    96 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528611005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528611604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
