--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.newyorker.com/books/page-turner/chapter-history">The Chapter: A History (2014)</a>
+                                    <a href="https://www.polygon.com/2018/6/7/17432928/star-wars-george-lucas-history">What if Star Wars never happened?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274225">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17273824">
                                         
-                                            comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=the-enemy">the-enemy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528568133"
+                                            href="https://news.ycombinator.com/user?id=laurex">laurex</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528562942"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    7 points
+                                    8 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528615203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528615803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
