--- a/jobs/page3.html
+++ b/jobs/page3.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17254212" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17254737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/kragniz/tor-controller">Kubernetes operator to automatically deploy and run Tor hidden services</a>
+                                    <a href="https://qeys.io">Qeys.io – Web app license validation</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17254737" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17256524" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://qeys.io">Qeys.io – Web app license validation</a>
+                                    <a href="https://www.helprange.com">Track and Control Your PDFs</a>
                                 </span>
                             </td>
                         </tr>
@@ -588,7 +588,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528618804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528619404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
