--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17254212" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17254737" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/kragniz/tor-controller">Kubernetes operator to automatically deploy and run Tor hidden services</a>
+                                    <a href="https://qeys.io">Qeys.io – Web app license validation</a>
                                 </span>
                             </td>
                         </tr>
@@ -155,9 +155,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17254737" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17256524" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://qeys.io">Qeys.io – Web app license validation</a>
+                                    <a href="https://www.helprange.com">Track and Control Your PDFs</a>
                                 </span>
                             </td>
                         </tr>
@@ -341,7 +341,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17247135">
                                         
-                                            484 comments
+                                            485 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dazhbog">dazhbog</a></strong> &nbsp;•&nbsp;
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=cjauvin">cjauvin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528461804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    650 points
+                                    651 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528618804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528619404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
