--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.anandtech.com/show/12910/amd-demos-7nm-vega-radeon-instinct-shipping-2018">AMD Demos 7nm Vega GPU</a>
+                                    <a href="https://gravitational.com/blog/golang-ssh-bastion-graceful-restarts/">Gracefully Restarting a Go Program Without Downtime</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17275387">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17270728">
                                         
-                                            34 comments
+                                            41 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jamesblonde">jamesblonde</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528583552"
+                                            href="https://news.ycombinator.com/user?id=aberoham">aberoham</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528502798"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    99 points
+                                    100 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17271131">
                                         
-                                            32 comments
+                                            33 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dailymorn">dailymorn</a></strong> &nbsp;•&nbsp;
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528622403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528623004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
