--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://groups.google.com/forum/#!topic/nodejs-sec/jGPlKJyLIxI">March 2018 Node.js Security Releases</a>
+                                    <a href="http://www.businessinsider.com/employee-burnout-tech-companies-silicon-valley-blind-survey-2018-5">Employee Burnout in the Tech Industry</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274432">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17276545">
                                         
-                                            1 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bdr04">bdr04</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528570475"
+                                            href="https://news.ycombinator.com/user?id=joubert">joubert</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528605284"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    8 points
+                                    3 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528626003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528626604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
