--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://gravitational.com/blog/golang-ssh-bastion-graceful-restarts/">Gracefully Restarting a Go Program Without Downtime</a>
+                                    <a href="http://semiengineering.com/fpgas-becoming-more-soc-like/#.Wxlg0Z4jrWM.facebook">FPGAs becoming more SoC-like</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17270728">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17271803">
                                         
-                                            41 comments
+                                            49 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=aberoham">aberoham</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528502798"
+                                            href="https://news.ycombinator.com/user?id=chclau">chclau</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528525257"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     101 points
                                 </span>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.amasad.me/github">GitHub and Open-Source Is a Boon for the Underprivileged</a>
+                                    <a href="https://gravitational.com/blog/golang-ssh-bastion-graceful-restarts/">Gracefully Restarting a Go Program Without Downtime</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17277018">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17270728">
                                         
-                                            54 comments
+                                            41 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=amasad">amasad</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528615562"
+                                            href="https://news.ycombinator.com/user?id=aberoham">aberoham</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528502798"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    100 points
+                                    101 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528627203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528627804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
