--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17254737" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://qeys.io">Qeys.io – Web app license validation</a>
+                                    <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528627804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528628404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
