--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -227,7 +227,7 @@
                                             href="https://news.ycombinator.com/user?id=jamesblonde">jamesblonde</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528583552"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    118 points
+                                    119 points
                                 </span>
                             </td>
                         </tr>
@@ -437,7 +437,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17260178">
                                         
-                                            218 comments
+                                            221 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Hooke">Hooke</a></strong> &nbsp;•&nbsp;
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.nowpublishers.com/article/Details/PGL-038">Reconciling Abstraction with High Performance: A MetaOCaml Approach</a>
+                                    <a href="https://medium.com/@bellmar/the-land-before-binary-cc705d5bdd70">The Land Before Binary</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17257482">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17275612">
                                         
-                                            5 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=myth_drannon">myth_drannon</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528389435"
+                                            href="https://news.ycombinator.com/user?id=mbellotti">mbellotti</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528587593"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     102 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528634404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528635004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
