--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -127,20 +127,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17255418" class="node"><i
-                                            class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://github.com/jonpe960/ufsm/tree/ufsm-0.1.0">µFSM – A state chart library for embedded applications</a>
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_hot_topic_title">
                                     <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
@@ -158,6 +144,20 @@
                                     <a href="https://news.ycombinator.com/item?id=17256524" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
                                     <a href="https://www.helprange.com">Track and Control Your PDFs</a>
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_hot_topic_title">
+                                    <a href="https://news.ycombinator.com/item?id=17261042" class="node"><i
+                                            class="fas fa-comment"></i></a>&nbsp;
+                                    <a href="https://github.com/mattdesl/jsconfeu-generative-visuals">Source Code for JSConfEU WebGL Visuals</a>
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528636204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528636804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
