--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,6 +215,30 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://www.phoronix.com/scan.php?page=news_item&px=Hygon-Dhyana-AMD-China-CPUs">Hygon Dhyana: Chinese X86 Server CPUs Based on AMD Zen</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17274097">
+                                        
+                                            comments
+                                        </a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=ntauthority">ntauthority</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528566710"
+                                       class="submissionTimestamp"></a> &nbsp;•&nbsp;
+                                    4 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://medium.com/tensorflow/ignorance-is-my-superpower-b8155e7cc59b">Ignorance Is My Superpower – TensorFlow</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -369,7 +393,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528638604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528639204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
