--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -127,9 +127,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17276738" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
+                                    <a href="https://send.rest/">https://send.rest "API to send notifications"</a>
                                 </span>
                             </td>
                         </tr>
@@ -141,9 +141,9 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17256524" class="node"><i
+                                    <a href="https://news.ycombinator.com/item?id=17265640" class="node"><i
                                             class="fas fa-comment"></i></a>&nbsp;
-                                    <a href="https://www.helprange.com">Track and Control Your PDFs</a>
+                                    <a href="https://CupKit.app">First app I've built. A free World Cup league game</a>
                                 </span>
                             </td>
                         </tr>
@@ -341,13 +341,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17273649">
                                         
-                                            105 comments
+                                            106 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528560555"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    516 points
+                                    517 points
                                 </span>
                             </td>
                         </tr>
@@ -395,7 +395,7 @@
                                             href="https://news.ycombinator.com/user?id=flying_sheep">flying_sheep</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528527835"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    465 points
+                                    466 points
                                 </span>
                             </td>
                         </tr>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528643404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528644004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
