--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -413,13 +413,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17264718">
                                         
-                                            485 comments
+                                            486 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=cjauvin">cjauvin</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528461804"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    676 points
+                                    677 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.nature.com/articles/d41586-018-05357-w">Sucking carbon dioxide from air is cheaper than scientists thought</a>
+                                    <a href="https://alexanderellis.github.io/blog/posts/check-valve/">Why does a spray bottle work?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17260500">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17273649">
                                         
-                                            279 comments
+                                            108 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kjeetgill">kjeetgill</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528407338"
+                                            href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528560555"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     525 points
                                 </span>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528647604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528648205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
