--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://alexanderellis.github.io/blog/posts/check-valve/">Why does a spray bottle work?</a>
+                                    <a href="https://www.nature.com/articles/d41586-018-05357-w">Sucking carbon dioxide from air is cheaper than scientists thought</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17273649">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17260500">
                                         
-                                            107 comments
+                                            279 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=otras">otras</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528560555"
+                                            href="https://news.ycombinator.com/user?id=kjeetgill">kjeetgill</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528407338"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    524 points
+                                    525 points
                                 </span>
                             </td>
                         </tr>
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=zaksoup">zaksoup</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528494042"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    519 points
+                                    520 points
                                 </span>
                             </td>
                         </tr>
@@ -347,7 +347,7 @@
                                             href="https://news.ycombinator.com/user?id=flying_sheep">flying_sheep</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528527835"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    469 points
+                                    470 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528647604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528648205" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
