--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -311,17 +311,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.phoronix.com/scan.php?page=news_item&px=Hygon-Dhyana-AMD-China-CPUs">Hygon Dhyana: Chinese X86 Server CPUs Based on AMD Zen</a>
+                                    <a href="https://www.nature.com/articles/s41467-018-04624-8.pdf">Seamlessly fused digital-analogue reconfigurable computing using memristors [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17274097">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17274506">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ntauthority">ntauthority</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528566710"
+                                            href="https://news.ycombinator.com/user?id=godelmachine">godelmachine</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528571533"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     4 points
                                 </span>
@@ -369,7 +369,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528653003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528653603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
